# aap-lv2-guitarix

./: .gitignore  .gitmodules  Makefile  README.md  build.gradle  gradle.properties  import-guitarix-deps.sh  settings.gradle
.github/workflows/: actions.yml
aap-guitarix/: build.gradle
aap-guitarix/src/main/: AndroidManifest.xml
aap-guitarix/src/main/cpp/: CMakeLists.txt
app/: build.gradle
app/src/androidTest/java/org/androidaudioplugin/aap_guitarix/: PluginTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/res/xml/: aap_metadata.xml
fftw3-aar/: build.gradle
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
